changed DTO type of classes to Record